@@ -43,38 +43,6 @@ printf '%s\n' \
 cp /etc/environment /etc/R/Renviron.site
 sed -i -e 's/\/usr\/lib\/x86_64-linux-gnu/\/usr\/lib\/x86_64-linux-gnu:\/lib\/x86_64-linux-gnu/g' /usr/lib/R/etc/ldpaths
 
-TOT_MEM=$(awk '/MemFree/ { printf "%i\n", $2/1024 }' /proc/meminfo)
-if [[ (TOT_MEM -lt 3000) ]] ;then
-  GPT_MAX_MEM=1024
-  GPT_MIN_MEM=1024
-elif [[ (TOT_MEM -ge 3000) && (TOT_MEM -lt 10000) ]] ;then
-  GPT_MAX_MEM=2048
-  GPT_MIN_MEM=2048
-elif [[ (TOT_MEM -ge 10000) && (TOT_MEM -lt 20000) ]] ;then
-  GPT_MAX_MEM=8192
-  GPT_MIN_MEM=8192
-elif [[ (TOT_MEM -ge 20000) ]] ;then
-  GPT_MAX_MEM=16384
-  GPT_MIN_MEM=16384
-else
-  GPT_MAX_MEM=1024
-  GPT_MIN_MEM=1024
-fi
-printf '%s\n' \
-    "-Xmx${GPT_MAX_MEM}m" \
-    "-Xms${GPT_MIN_MEM}m" \
-    "-XX:+AggressiveOpts" \
-    "-Xverify:none" \
-    "-Dsnap.log.level=ERROR"
-
-printf '%s\n' \
-    "-Xmx${GPT_MAX_MEM}m" \
-    "-Xms${GPT_MIN_MEM}m" \
-    "-XX:+AggressiveOpts" \
-    "-Xverify:none" \
-    "-Dsnap.log.level=ERROR" \
-    > /usr/local/snap/bin/gpt.vmoptions
-
 userHome=/home/$sandbox_user
 cp -n /etc/skel/.bashrc "$userHome"
 cp -n /etc/skel/.profile "$userHome"
